--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -35,7 +35,7 @@
         h1 {
             color: #FF9000;
             text-align: center;
-            /* margin-top: 20px; */
+            margin-top: 14px;
         }
 
         .text-container {
@@ -102,9 +102,263 @@
             <img src="/public/bg/share.svg" alt="Bottom Left Design" width="30px" height="32px">
         </div>
         <div class="bottom-right-svg">
-            <!-- <img src="/public/bg/ws.svg" alt="Bottom Right Design" width="200px" height="40px"> -->
             <img src="/public/bg/next.svg" alt="Bottom Right Design" width="60px" height="30px"
-                style="margin-right: -10px;">
+                style="margin-right: -8px;">
+        </div>
+    </div>
+</body>
+
+</html> -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <style>
+        @font-face {
+            font-family: 'Mont';
+            src: url('./public/font/mont.ttf') format('truetype');
+            font-weight: 600;
+            font-style: normal;
+        }
+
+        body {
+            background: #005051;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Mont', sans-serif;
+        }
+
+        .box {
+            width: 500px;
+            height: 625px;
+            position: relative;
+            font-size: 20px;
+            background-color: #005051;
+            /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+            display: flex;
+            flex-direction: column;
+            border: 1px solid red;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 14px;
+        }
+        .white {
+            color: white;
+        }
+        .yellow {
+            color: #FF9000;
+        }
+
+        .text-container {
+            flex-grow: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 20px;
+            margin-bottom: 80px;
+        }
+
+        .text-content {
+            color: white;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
+            max-width: 100%;
+            line-height: 100%;
+            font-family: 'Mont', sans-serif !important;
+            font-size: 40px;
+        }
+
+        .top-right-svg {
+            position: absolute;
+            top: 20px;
+            right: 25px;
+            width: 20px;
+            height: 30px;
+        }
+
+        .bottom-left-svg {
+            position: absolute;
+            bottom: 20px;
+            left: 25px;
+            gap: 15px;
+            display: flex;
+        }
+
+        .bottom-right-svg {
+            position: absolute;
+            bottom: 10px;
+            right: 25px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="box">
+        <img src="/public/bg/save.svg" alt="Top Right Design" class="top-right-svg">
+
+        <h1 class="white" style="position: absolute; top:0; width: 100%;"><span class="yellow">Flex</span> yoki <span class="yellow">Grid</span></h1>
+        <div style="display: flex; gap:20px; padding: 20px;flex-direction: column; margin:auto;" >
+            <div style="display: flex; align-items:center; gap:20px; " >
+                <img src="/public/bg/close.svg" alt="Flex" width="30px" height="30px">
+                <span class="white">Flex faqat bir yo’nalishli yoki qator bo’ylab
+                    yoki untun bo’ylab</span>
+            </div>
+            <div style="display: flex; align-items:center; gap:20px; " >
+                <img src="/public/bg/correct.svg" alt="Flex" width="30px" height="30px">
+                <span class="white">Gridda ikki yo’nalishlik, bir vaqtni o’zida
+                    qotor bo’ylab va ustun bo’ylab ishlatish
+                    mumkin</span>
+            </div>
+            <div style="display: flex; align-items:center; gap:20px; " >
+                <img src="/public/bg/close.svg" alt="Flex" width="30px" height="30px">
+                <span class="white">Flex faqat bir yo’nalishli yoki qator bo’ylab
+                    yoki untun bo’ylab</span>
+            </div>
+            <div style="display: flex; align-items:center; gap:20px; " >
+                <img src="/public/bg/correct.svg" alt="Flex" width="30px" height="30px">
+                <span class="white">Gridda ikki yo’nalishlik, bir vaqtni o’zida
+                    qotor bo’ylab va ustun bo’ylab ishlatish
+                    mumkin</span>
+            </div>
+            <div style="display: flex; align-items:center; gap:20px; " >
+                <img src="/public/bg/correct.svg" alt="Flex" width="30px" height="30px">
+                <span class="white">Gridda ikki yo’nalishlik, bir vaqtni o’zida
+                    qotor bo’ylab va ustun bo’ylab ishlatish
+                    mumkin</span>
+            </div>
+        </div>
+        <div class="bottom-left-svg">
+            <img src="/public/bg/like.svg" alt="Bottom Left Design" width="30px" height="32px">
+            <img src="/public/bg/comment.svg" alt="Bottom Left Design" width="30px" height="32px">
+            <img src="/public/bg/share.svg" alt="Bottom Left Design" width="30px" height="32px">
+        </div>
+        <div class="bottom-right-svg">
+            <img src="/public/bg/next.svg" alt="Bottom Right Design" width="60px" height="30px"
+                style="margin-right: -8px;">
+        </div>
+    </div>
+</body>
+
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <style>
+        @font-face {
+            font-family: 'Mont';
+            src: url('./public/font/mont.ttf') format('truetype');
+            font-weight: 600;
+            font-style: normal;
+        }
+
+        body {
+            background: #005051;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Mont', sans-serif;
+        }
+
+        .box {
+            width: 500px;
+            height: 625px;
+            position: relative;
+            font-size: 20px;
+            background-color: #005051;
+            /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+            display: flex;
+            flex-direction: column;
+            border: 1px solid red;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 14px;
+        }
+
+        .white {
+            color: white;
+        }
+
+        .yellow {
+            color: #FF9000;
+        }
+
+        .text-container {
+            flex-grow: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 20px;
+            margin-bottom: 80px;
+        }
+
+        .text-content {
+            color: white;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
+            max-width: 100%;
+            line-height: 100%;
+            font-family: 'Mont', sans-serif !important;
+            font-size: 40px;
+        }
+
+        .top-right-svg {
+            position: absolute;
+            top: 20px;
+            right: 25px;
+            width: 20px;
+            height: 30px;
+        }
+
+        .bottom-left-svg {
+            position: absolute;
+            bottom: 20px;
+            left: 25px;
+            gap: 15px;
+            display: flex;
+        }
+
+        .bottom-right-svg {
+            position: absolute;
+            bottom: 10px;
+            right: 25px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="box">
+        <img src="/public/bg/save.svg" alt="Top Right Design" class="top-right-svg">
+
+        <h1 class="white" style="position: absolute; top:0; width: 100%;"><span class="yellow">Flex</span> yoki <span
+                class="yellow">Grid</span></h1>
+        <div style="padding: 20px; margin:auto; max-height: 80%; box-sizing: border-box;">
+            <img src="/public/bg/code.png" alt="Flex"
+                style="width: auto; height: auto; max-width: 100%; max-height: 100%;">
+        </div>
+        <div class="bottom-left-svg">
+            <img src="/public/bg/like.svg" alt="Bottom Left Design" width="30px" height="32px">
+            <img src="/public/bg/comment.svg" alt="Bottom Left Design" width="30px" height="32px">
+            <img src="/public/bg/share.svg" alt="Bottom Left Design" width="30px" height="32px">
+        </div>
+        <div class="bottom-right-svg">
+            <img src="/public/bg/next.svg" alt="Bottom Right Design" width="60px" height="30px"
+                style="margin-right: -8px;">
         </div>
     </div>
 </body>
